# ProSA

./: .gitignore  404.html  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md  VERSIONING.md  ch00-00-prosa.html  ch00-01-foreword.html  ch00-02-introduction.html  ch00-03-architecture.html  ch01-00-ops.html  ch01-01-cargo-prosa.html  ch01-02-01-observability.html  ch01-02-02-ssl.html  ch01-02-03-stream.html  ch01-02-04-run.html  ch01-02-config.html  ch01-03-monitoring.html  ch01-03-puppet.html  ch01-04-01-gcp-cloud_run.html  ch01-04-02-clever_cloud.html  ch01-04-cloud.html  ch01-04-puppet.html  ch01-05-01-gcp-cloud_run.html  ch01-05-02-clever_cloud.html  ch01-05-cloud.html  ch01-06-sumup.html  ch02-00-adaptor.html  ch02-01-tvf.html  ch02-02-creation.html  ch02-03-declaration.html  ch02-04-observability.html  ch03-00-proc.html  ch03-01-settings.html  ch03-02-creation.html  ch03-03-declaration.html  ch03-04-error.html  ch03-05-service.html  ch03-06-events.html  (+16 more)
.github/workflows/: ci.yml  pages.yml
assets/: header_badges.md
cargo-prosa/: Cargo.toml  README.md
cargo-prosa/assets/: build.rs.j2  container.j2  launchd.j2  main.rs.j2  systemd.j2
cargo-prosa/src/: builder.rs  cargo.rs  lib.rs  main.rs  package.rs
cargo-prosa/src/package/: container.rs  deb.rs  install.rs  rpm.rs
cargo-prosa/tests/: cargo-prosa.rs  cargo-rmac.rs
prosa/: Cargo.toml  my_prosa_settings.yml  proc.rs
prosa/examples/: my_prosa_settings.yml  proc.rs
prosa/src/: core.rs  event.rs  inj.rs  io.rs  lib.rs  stub.rs
prosa/src/core/: adaptor.rs  error.rs  main.rs  msg.rs  proc.rs  queue.rs  service.rs  settings.rs
prosa/src/event/: pending.rs  queue.rs  speed.rs
prosa/src/event/queue/: mpsc.rs  timed.rs
prosa/src/inj/: adaptor.rs  proc.rs
prosa/src/io/: listener.rs  stream.rs
prosa/src/stub/: adaptor.rs  proc.rs
prosa_book/: README.md  book.toml  init.sh  worldline.css
prosa_book/src/: README.md  SUMMARY.md  ch00-00-prosa.md  ch00-01-foreword.md  ch00-02-introduction.md  ch00-03-architecture.md  ch01-00-ops.md  ch01-01-cargo-prosa.md  ch01-02-01-observability.md  ch01-02-02-run.md  ch01-02-02-ssl.md  ch01-02-03-stream.md  ch01-02-04-run.md  ch01-02-config.md  ch01-03-monitoring.md  ch01-04-01-gcp-cloud_run.md  ch01-04-02-clever_cloud.md  ch01-04-cloud.md  ch01-05-cloud.md  ch01-06-sumup.md  ch02-00-adaptor.md  ch02-01-tvf.md  ch02-02-creation.md  ch02-03-declaration.md  ch02-04-observability.md  ch03-00-proc.md  ch03-01-settings.md  ch03-02-creation.md  ch03-03-declaration.md  ch03-04-error.md  ch03-05-service.md  ch03-06-events.md  ch03-07-io.md  ch03-08-threads.md  ch03-09-builtin.md  ch04-00-vibe.md  worldline.css
prosa_macros/: Cargo.toml
prosa_macros/src/: adaptor.rs  io.rs  lib.rs  proc.rs  settings.rs  tvf.rs
prosa_macros/src/tvf/: buffer.rs  literal.rs  value.rs
prosa_macros/tests/: tvf.rs
prosa_utils/: Cargo.toml  build.rs
prosa_utils/examples/: settings.yml
prosa_utils/src/: config.rs  dict.rs  lib.rs  msg.rs  queue.rs
prosa_utils/src/config/: observability.rs  ssl.rs  tracing.rs
prosa_utils/src/config/ssl/: openssl.rs
prosa_utils/src/dict/: base.rs  deserialize.rs  field_type.rs  ops.rs  path.rs  serialize.rs
prosa_utils/src/msg/: deserialize.rs  dict.rs  serde.rs  serialize.rs  simple_string_tvf.rs  tvf.rs  value.rs
prosa_utils/src/msg/dict/: path.rs
prosa_utils/src/msg/serde/: dict_de.rs  dict_ser.rs  msg_de.rs  msg_ser.rs
prosa_utils/src/queue/: lockfree.rs  mpsc.rs  spmc.rs
skills/prosa/: SKILL.md
skills/prosa/dev/: adaptor-patterns.md  events-services.md  io-tvf.md  processor-pattern.md
skills/prosa/diag/: error-recovery.md  health-status.md  performance.md  troubleshooting.md
skills/prosa/ops/: cargo-prosa-cli.md  configuration.md  deployment.md  observability.md  ssl-network.md
