[workspace]
resolver = "2"
members = [
    "prosa_macros",
    "prosa_utils",
    "prosa", 
    "cargo-prosa",
]

[workspace.package]
authors = ["Jeremy HERGAULT <jeremy.hergault@worldline.com>", "Anthony THOMAS <anthony.thomas@worldline.com>", "Olivier SCHYNS <olivier.schyns@worldline.com>", "Rene-Louis EYMARD <rene-louis.eymard@worldline.com>"]
homepage = "https://worldline.com/"
repository = "https://github.com/worldline/ProSA"
edition = "2024"
license = "LGPL-3.0-or-later"

include = [
    "**/*.rs",
    "Cargo.toml",
    "*assets/*",
    "COPYRIGHT",
]

[workspace.dependencies]
prosa-utils = { version = "0.3.3", path = "prosa_utils", default-features = false }
prosa-macros = { version = "0.3.2", path = "prosa_macros" }
thiserror = "2"
aquamarine = "0.6"
bytes = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["fs", "macros", "net", "parking_lot", "rt", "rt-multi-thread", "signal", "sync", "time"] }
config = { version = "0.15", default-features = false, features = ["toml", "json", "yaml", "json5", "convert-case", "async"] }
toml = "0.8"

# Config Observability
log = "0.4"
tracing-core = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.30"
opentelemetry = { version = "0.29", features = ["metrics", "trace", "logs"] }
opentelemetry_sdk = { version = "0.29", features = ["metrics", "trace", "logs", "rt-tokio"] }
opentelemetry-stdout = { version = "0.29", features = ["metrics", "trace", "logs"]}
opentelemetry-otlp = { version = "0.29", features = ["metrics", "trace", "logs", "grpc-tonic"]}
prometheus = { version = "0.14" }
opentelemetry-prometheus = { version = "0.29" }
opentelemetry-appender-log = "0.29"

# Config SSL
openssl-sys = { version = "0.9" }
openssl = { version = "0.10" }

# Web
hyper = { version = "1", features = ["server", "http1", "http2"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["server-auto", "http1", "http2", "tokio", "tracing"] }
