[package]
name = "cargo-prosa"
version = "0.1.1"
authors.workspace = true
description = "ProSA utility to package and deliver a builded ProSA"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
include.workspace = true

[[bin]]
name = "cargo-prosa"
path = "src/main.rs"

[dependencies]
bytes.workspace = true
thiserror.workspace = true
prosa-utils = { workspace = true, features = ["msg", "config", "config-observability"] }
aquamarine.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = "1"
toml = "0.8"
toml_edit = { version = "0.22", features = ["serde"] }
serde_json = "1"
serde_yaml = "0.9"
config = "0.13"
tera = "1"
daemonize = "0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = { version = "3", features = ["regex"] }
