[package]
name = "cargo-prosa"
version = "0.3.0"
authors.workspace = true
description = "ProSA utility to package and deliver a builded ProSA"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
include.workspace = true

[[bin]]
name = "cargo-prosa"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
aquamarine.workspace = true
clap = "4"
clap_complete = "4"
serde = "1"
toml.workspace = true
toml_edit = { version = "0.22", features = ["serde"] }
serde_json = "1"
serde_yaml = "0.9"
config.workspace = true
tera = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = { version = "3", features = ["regex"] }
