[package]
name = "prosa"
version = "0.4.0"
authors.workspace = true
description = "ProSA core"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
include.workspace = true

[features]
default = ["http-proxy", "openssl"]
http-proxy = ["dep:async-http-proxy"]
openssl = ["dep:openssl", "dep:tokio-openssl", "prosa-utils/config-openssl"]
openssl-vendored = ["openssl", "openssl/vendored", "prosa-utils/config-openssl-vendored"]
queue = ["prosa-utils/queue"]

[[example]]
name = "proc"
path = "examples/proc.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.prosa]
main = ["core::main::MainProc"]

[package.metadata.prosa.inj]
proc = "inj::proc::InjProc"
settings = "inj::proc::InjSettings"
adaptor = ["inj::adaptor::InjDummyAdaptor"]

[package.metadata.prosa.stub]
proc = "stub::proc::StubProc"
settings = "stub::proc::StubSettings"
adaptor = ["stub::adaptor::StubParotAdaptor"]

[dependencies]
prosa-utils = { workspace = true, features = ["msg", "config", "config-observability", "config-observability-prometheus"] }
prosa-macros.workspace = true
log.workspace = true
tracing = "0.1"
thiserror.workspace = true
base64 = "0.22"
url = { version = "2", features = ["serde"] }
rlimit = "0.10"

aquamarine.workspace = true

openssl = { workspace = true, optional = true }
tokio.workspace = true
tokio-openssl = { version = "0.6", optional = true }
async-http-proxy = { version = "1", optional = true, features = ["runtime-tokio","basic-auth"] }

serde.workspace = true
config = { version = "0.15", default-features = false, features = ["toml", "yaml", "json", "convert-case"] }
glob = { version = "0.3" }
toml.workspace = true
serde_yaml = "0.9"

opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
prometheus.workspace = true
memory-stats = "1"

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }
