[package]
name = "prosa-macros"
version = "0.2.0"
authors.workspace = true
description = "ProSA macros"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
include.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
chrono.workspace = true

[dev-dependencies]
bytes.workspace = true
prosa-utils.workspace = true
